roomId fix